# pong

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
src/lib/: CMakeLists.txt  sum_integers.cpp  sum_integers.hpp
src/lib/specs/: CMakeLists.txt  README.md  main.cpp
src/lib/tests/: CMakeLists.txt  README.md  main.cpp
src/pong/: CMakeLists.txt
src/pong/specs/: CMakeLists.txt  main.cpp
src/pong/specs/ball/: scenarios.hpp
src/pong/specs/game/: scenarios.hpp
src/pong/specs/paddle/: scenarios.hpp
src/pong/specs/playground/: scenarios.hpp
src/pong/src/: ball.cpp  ball.hpp  game.cpp  game.hpp  integratable.cpp  integratable.hpp  paddle.cpp  paddle.hpp  playground.cpp  playground.hpp  pong.cpp  position.cpp  position.hpp  updatable.cpp  updatable.hpp  velocity.cpp  velocity.hpp  wall.cpp  wall.hpp
src/pong/tests/: CMakeLists.txt  main.cpp
src/pong/tests/ball/: tests.hpp
src/pong/tests/game/: tests.hpp
src/pong/tests/paddle/: tests.hpp
src/pong/tests/playground/: tests.hpp
src/pong/tests/velocity_integrator/: tests.hpp
